Added Setting battery charging current
